fixed spacing issue on bio tablet page

--- a/Sprint-1.2/styles/_shows-2tablet.scss
+++ b/Sprint-1.2/styles/_shows-2tablet.scss
@@ -1,4 +1,4 @@
-@media (min-width: 650px) {
+@media (min-width: 685px) {
     .about__img--title {
         font-family: bold-font;
         font-size: 1.7rem; 
